--- a/MyWebsite/Views/Shared/_Layout.cshtml
+++ b/MyWebsite/Views/Shared/_Layout.cshtml
@@ -22,11 +22,11 @@
     <div class="navbar-fixed">
         <nav class="black">
             <div class="nav-wrapper" style="margin-left:100px; margin-right: 100px;">
-                <a href="@Url.Action("Index", "Home")" class="brand-logo" style="letter-spacing:2.5px; color:#cfd8dc;">JT</a>
+                <a href="@Url.Action("Index", "Home")" class="brand-logo" style="letter-spacing:2.5px; color:#cfd8dc;">Jordyn</a>
                 <ul class="right hide-on-med-and-down">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">ABOUT</a></li>
                     <li><a asp-area="" asp-controller="Projects" asp-action="Index">PORTFOLIO</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">CONTACT</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Experience">EXPERIENCE</a></li>
                 </ul>
             </div>
         </nav>
